--- a/egui-sdl2-event/Cargo.toml
+++ b/egui-sdl2-event/Cargo.toml
@@ -14,4 +14,4 @@ homepage = "https://github.com/kaphula/egui-sdl2-event"
 
 [dependencies]
 sdl2 = "0.35.2"
-egui = { version = "0.21.0" }
+egui = { git = "https://github.com/MFEK/egui.rlib" }
